Finalización de desarrollo, incluyendo filtros, paginación y ordenaciones

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -14,6 +14,8 @@
     --secondary-error: #fa2d2da1;
     --primary-success: #069308;
     --secondary-success: #23962ba1;
+    --font-color: #333333;
+    --light-green: #d6e9c6;
     /* --gray: #666;
     --dark-gray: #212529;
     --light-gray: #848484;
